--- a/cloud-eureka-server7001/src/main/resources/application.yml
+++ b/cloud-eureka-server7001/src/main/resources/application.yml
@@ -8,7 +8,10 @@ eureka:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://eureka7002.com:7002/eureka/
+      #集群
+    #  defaultZone: http://eureka7002.com:7002/eureka/
+      #单机
+      defaultZone: http://eureka7001.com:7001/eureka/
   server:
     enable-self-preservation: false
     eviction-interval-timer-in-ms: 2000
