--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -8,15 +8,14 @@ spring:
     encoding:
       force: true
       charset: UTF-8
-
   application:
-    name: cloud-payment-service
+    name: CLOUD-PAYMENT-SERVICE
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource  #当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver     #数据库驱动包
     url: jdbc:mysql://localhost:3306/db2020?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true
     username: root
-    password: **********
+    password: *******
   devtools:
     restart:
       enabled: true #是否支持热部署
