--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
       <module>cloud-providerconsul-payment8006</module>
     <module>cloud-providerconsul-payment8006</module>
     <module>cloud-consumerconsul-order80</module>
+      <module>cloud-consumer-feign-order80</module>
+      <module>cloud-provider-hystrix-payment8001</module>
+      <module>cloud-consumer-feign-hystrix-order80</module>
+      <module>cloud-consumer-hystrix-dashboard9001</module>
+      <module>cloud-gateway-gateway9527</module>
+      <module>cloud-config-center-3344</module>
+    <module>cloud-config-client-3355</module>
+      <module>cloudalibaba-provider-payment9001</module>
+    <module>cloudalibaba-provider-payment9002</module>
+    <module>cloudalibaba-consumer-nacos-order83</module>
+    <module>cloudalibaba-config-nacos-client3377</module>
   </modules>
 
   <packaging>pom</packaging>
@@ -41,6 +52,14 @@
   <dependencyManagement>
     <dependencies>
       <!--spring boot 2.2.2-->
+      <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+        <version>2.1.0.RELEASE</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
